# hopfield-recovery

./: README.md  config.h  configure.ac
res/: app-hopfield.glade
src/: Makefile.am  classes.c  classes.h  global_constants.h  gui.c  hopfield_recovery.c  hopfield_recovery.h  imgproc.c  imgproc.h  main.c  random_helper.c  random_helper.h
